--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,26 +22,29 @@ jobs:
         echo "Astro CLI installed successfully"
         astro version
 
-    - name: Create Airflow variables using Astro CLI
+    - name: Create Airflow variables using Astro CLI with loop
       run: |
         echo "Creating Airflow variables directly in the deployment using Astro CLI..."
         
-        # Set environment variables for use in commands
+        # Set deployment ID
         DEPLOYMENT_ID="${{ vars.DEPLOYMENT_ID }}"
-        ENVIRONMENT="${{ vars.AIRFLOW_ENVIRONMENT || 'production' }}"
-        API_KEY="${{ secrets.AIRFLOW_API_KEY || 'demo-api-key' }}"
-        DATABASE_URL="${{ secrets.DATABASE_URL || 'demo-db-url' }}"
-        DEPLOYMENT_DATE="$(date -u +'%Y-%m-%d_%H:%M:%S')"
-        DEPLOYED_BY="${{ github.actor }}"
-        COMMIT_SHA="${{ github.sha }}"
         
-        # Create variables using Astro CLI
-        astro deployment airflow-variable create --deployment-id "$DEPLOYMENT_ID" --key environment --value "$ENVIRONMENT"
-        astro deployment airflow-variable create --deployment-id "$DEPLOYMENT_ID" --key api_key --value "$API_KEY"
-        astro deployment airflow-variable create --deployment-id "$DEPLOYMENT_ID" --key database_url --value "$DATABASE_URL"
-        astro deployment airflow-variable create --deployment-id "$DEPLOYMENT_ID" --key deployment_date --value "$DEPLOYMENT_DATE"
-        astro deployment airflow-variable create --deployment-id "$DEPLOYMENT_ID" --key deployed_by --value "$DEPLOYED_BY"
-        astro deployment airflow-variable create --deployment-id "$DEPLOYMENT_ID" --key commit_sha --value "$COMMIT_SHA"
+        # Define variables in a structured format
+        declare -A variables=(
+          ["environment"]="${{ vars.AIRFLOW_ENVIRONMENT || 'production' }}"
+          ["api_key"]="${{ secrets.AIRFLOW_API_KEY || 'demo-api-key' }}"
+          ["database_url"]="${{ secrets.DATABASE_URL || 'demo-db-url' }}"
+          ["deployment_date"]="$(date -u +'%Y-%m-%d_%H:%M:%S')"
+          ["deployed_by"]="${{ github.actor }}"
+          ["commit_sha"]="${{ github.sha }}"
+        )
+        
+        # Loop through the associative array and create each variable
+        for key in "${!variables[@]}"; do
+          value="${variables[$key]}"
+          echo "Creating variable: $key"
+          astro deployment airflow-variable create --deployment-id "$DEPLOYMENT_ID" --key "$key" --value "$value"
+        done
         
         echo "Airflow variables created successfully using Astro CLI"
 
