Updated the yaml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,3 +53,4 @@ jobs:
       with:
         deployment-id: ${{ vars.DEPLOYMENT_ID }}
         description: "${{ github.actor }} - $(git log -1 --pretty=%B)"
+        pytest: true
